Make public API more consistent (no null)